WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102965
[chromium] Fix indenting in RenderThemeChromiumSkia.h.
https://bugs.webkit.org/show_bug.cgi?id=102965
Summary
[chromium] Fix indenting in RenderThemeChromiumSkia.h.
W. James MacLean
Reported
2012-11-21 11:33:24 PST
[chromium] Fix indenting in RenderThemeChromiumSkia.h.
Attachments
Patch
(14.08 KB, patch)
2012-11-21 11:36 PST
,
W. James MacLean
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
W. James MacLean
Comment 1
2012-11-21 11:36:15 PST
Created
attachment 175489
[details]
Patch
Adam Barth
Comment 2
2012-11-21 11:38:04 PST
Comment on
attachment 175489
[details]
Patch Thanks.
WebKit Review Bot
Comment 3
2012-11-21 12:11:06 PST
Comment on
attachment 175489
[details]
Patch Clearing flags on attachment: 175489 Committed
r135423
: <
http://trac.webkit.org/changeset/135423
>
WebKit Review Bot
Comment 4
2012-11-21 12:11:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug