[chromium] Fix indenting in RenderThemeChromiumSkia.h. https://bugs.webkit.org/show_bug.cgi?id=102965

Reviewed by Adam Barth.

Much of RenderThemeChromiumSkia.h was indented too far, making the
file confusing to read. This CL removes the extra indents.

* rendering/RenderThemeChromiumSkia.h:
(RenderThemeChromiumSkia):


Canonical link: https://commits.webkit.org/121084@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135423 268f45cc-cd09-0410-ab3c-d52691b4dbfc